updated css page with layout tags
If applied, this commit will add layout tags

--- a/css/style.css
+++ b/css/style.css
@@ -3,13 +3,26 @@ Colors used:
 Primary Color (Black): #1e1d22;
 Secondary Color (White): #ffffff;
 */
+
+header {
+  background-color: #ffe4c4;
+  text-align: center;
+  padding: 10px 0;
+  margin: 10 px;
+  box-shadow: 0px 6px 11px 1px rgba(0,0,0,0.2);
+  -webkit-box-shadow: 0px 6px 11px 1px rgba(0,0,0,0.2);
+  -moz-box-shadow: 0px 6px 11px 1px rgba(0,0,0,0.2);
+  position: fixed;
+  width: 100%;
+}
+
 body {
-    background-color: #1e1d22;
+    background-color: #ffffff;
     font-family: 'Hind Madurai', sans-serif;
     font-size: 16px; /* Sets the font size to 16px */
     font-weight: 300; /* Sets the font weight to 300 */
     line-height: 1.6; /* Sets the line-height to 1.6 * the font-size */
-    color: #ffffff;
+    color: #1e1d22;
   }
   
   h1, h2, h3, h4 {
@@ -39,7 +52,7 @@ body {
   }
 
 a {
-  color: #ffb500;
+  color: #ffffff;
   text-decoration: none; /* No underlining */
 }
 a:hover {
@@ -48,7 +61,7 @@ a:hover {
 }
 
 a:visited { /* visited link */
-    color: #ffb500;
+    color: #ffffff;
   }
   a:active { /* selected link */
     color: #994c30;
@@ -86,4 +99,68 @@ a:focus {
   .button.contact:hover {
     background-color: #ffb500;
     color: #ffffff;
+  }
+
+/* Layout styling */
+
+.container {
+  padding: 0 15px;
+}
+
+.row {
+  margin: 25px 0; /* 25px top and bottom, 0 left and right */
+}
+
+#work .row {
+  padding-bottom: 25px; border-bottom: 1px solid #4a4a4a;
+}
+
+#hero {
+  margin: 0;
+  padding: 0.67em 0;
+  text-align: center; /* Centers text */
+}
+
+.logo {
+  max-width: 250px;
+}
+
+nav > ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+nav > ul > li {
+  display: inline-block;
+}
+
+nav > ul > li > a {
+  padding: 0 15px;
+  text-transform: uppercase;
+  font-weight: 700;
+  color: #4a4a4a;
+  width: 100%;
+}
+
+#hero {
+  background-color: #ffe4c4;
+}
+
+main {
+  padding-top: 169.52px;
+}
+
+#project-title h1 {
+  text-align: center; /* Centers text */
+}
+
+#project-process .center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+footer {
+  text-align: center;
   }
