--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,7 @@ a:focus {
 .button {
     display: inline-block; 
     background-color: #2b7a78;
-    color: #ffffff; 
+    color: #feffff; 
     font-weight: 400;
     text-decoration: none;
     padding: 10px;
@@ -124,11 +124,6 @@ a:focus {
   display: table;
 }
 
-.column {
-  float: left;
-  width: 50%;
-  padding: 5px;
-}
 
 #work .row {
   padding-bottom: 25px; border-bottom: 1px solid #4a4a4a;
@@ -360,62 +355,12 @@ Medium devices (640px and larger)
         padding: 50px 15px;
     }
 
-    .img1 {
-      max-width: 25%;
-    }
-  
-    .img2 {
-      max-width: 50%;
-    }
-  
-    .img3 {
-      max-width: 75%;
-    }
-  
-    .img1center {
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-      max-width: 25%;
-      max-height: auto;
-    }
-  
-    .img2center {
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-      max-width: 50%;
-      max-height: auto;
-    }
-  
-    .img3center {
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-      max-width: 75%;
-      max-height: auto;
-    }
-  
-    .center {
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-      max-width: 50%
-    }
-  
-    .userresearch_2 {
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-      max-width: 99%
-    }
-
-
+  }
 
 /* ==============================
 Large devices (1024px or larger)
 ================================= */
-@media only screen and (min-width: 1024px) {}
+@media only screen and (min-width: 1024px) {
 
 .container {
         max-width: 1200px;
@@ -458,8 +403,63 @@ nav>ul>li>a {
       padding: 10px;
 }
 
+.column {
+  float: left;
+  width: 50%;
+  padding: 5px;
+}
 
+.img1 {
+  max-width: 25%;
+}
 
+.img2 {
+  max-width: 50%;
+}
+
+.img3 {
+  max-width: 75%;
+}
+
+.img1center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 25%;
+  max-height: auto;
+}
+
+.img2center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 50%;
+  max-height: auto;
+}
+
+.img3center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 75%;
+  max-height: auto;
+}
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 50%
+}
+
+.userresearch_2 {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 99%
+}
+
+}
 
 /* ==============================
 X-large devices (1440px or larger)
