--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,7 @@ Secondary Color (White): #ffffff;
 
 header {
   background-color: #17252a;
-  padding: 25px 0;
-  margin: 10 px;
+  padding: 10px 0;
   box-shadow: 0px 6px 11px 1px rgba(0,0,0,0.2);
   -webkit-box-shadow: 0px 6px 11px 1px rgba(0,0,0,0.2);
   -moz-box-shadow: 0px 6px 11px 1px rgba(0,0,0,0.2);
@@ -106,8 +105,6 @@ a:focus {
     color: #ffffff;
   }
 
-
-
 /* Layout styling */
 
 .container {
@@ -149,8 +146,17 @@ nav > ul > li > a {
   padding: 0 15px;
   text-transform: uppercase;
   font-weight: 700;
-  color: #4a4a4a;
-  width: 100%;
+  color: #c0d5dd;
+}
+
+nav > ul > li > a:hover, a:focus {
+    color: #c0d5dd;
+    text-decoration: none;
+}
+
+nav > ul > li > a:active {
+  padding: 0 15px;
+  color: #c0d5dd;
 }
 
 .navtoggle li:not(:last-child) {
@@ -162,24 +168,24 @@ nav > ul > li > a {
 }
 
 .navtoggle.responsive nav {
-  padding: 24px 0 0;
+  padding: 0px 0;
 }
 
 .navtoggle.responsive li  {
   display: block;
   padding: 10px 0;
   border-top: 1px solid rgba(255,127,80,0.5);
+  text-align: right;
 }
 
 .navtoggle.responsive li:last-child  {
-  padding: 0 0 10px;
+  padding: 0 0 16px;
 }
 
 .navtoggle li .icon {
   position: absolute;
   right: 0px;
-  left: 425px;
-  top: 12px;
+  top: 10px;
   font-size: 20px;
 }
 
@@ -192,7 +198,7 @@ nav > ul > li > a {
 }
 
 main {
-  padding-top: 106px;
+  padding-top: 76px;
 }
 
 #project-title h1 {
@@ -329,7 +335,7 @@ Medium devices (640px and larger)
     }
 
     #contact p {
-        font-family: 'Poppins', sans-serif;
+        font-family: 'Hind Madurai', sans-serif;
         font-size: 16px;
         font-weight: 400;
         padding: 10px 0;
@@ -427,6 +433,24 @@ nav>ul>li>a {
   margin-right: auto;
   max-width: 25%;
   max-height: auto;
+}
+
+.img1right {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 25%;
+  max-height: auto;
+  float: right;
+}
+
+.img1left {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 25%;
+  max-height: auto;
+  float: left;
 }
 
 .img2center {
