--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,7 @@ a:focus {
 
   .button.contact:hover {
     background-color: #2b7a78;
-    color: #ffffff;
+    color: #feffff;
   }
 
 #about-title {
@@ -292,7 +292,7 @@ Medium devices (640px and larger)
     nav>ul>li>a {
     font-family: 'Hind Madurai', sans-serif;
         font-size: 16px;
-        color: #4a4a4a;;
+        color: #feffff;;
         font-weight: 500;
         letter-spacing: 0.05em;
         padding: 0;
@@ -301,8 +301,8 @@ Medium devices (640px and larger)
     }
 
     nav>ul>li>a:hover {
-        color: #6e0739;
-        border-bottom: 3px solid #000000;
+        color: #c0d5dd;
+        border-bottom: 3px solid #6e0739;
     }
 
     .navtoggle li:not(:last-child) {
